# ai-travel-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  project_scope.md  pyproject.toml  skills-lock.json
backend/app/: checkpoints.db-shm  checkpoints.db-wal  create_db.py  database.py  main.py  seed_data.py
backend/app/agents/: travel_agent.py
backend/app/api/: auth.py  chat.py
backend/app/rag/: ingestion.py  vector_db.py
backend/app/schemas/: auth.py  chat.py
backend/app/services/: security.py  tools.py
backend/scripts/: clean_data.py  create_db.py  seed_data.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_mapping.py  test_stream.py  test_tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: AuthView.css  BookingApprovalModal.css  BookingApprovalModal.tsx  ChatMessage.css  ChatMessage.tsx  ChatSidebar.css  ChatSidebar.tsx  ChatView.css  ChatView.tsx  DashboardView.css  DashboardView.tsx  ItineraryCanvas.css  ItineraryCanvas.tsx  LoginView.tsx  MessageInput.css  MessageInput.tsx  RegisterView.tsx  TypingIndicator.css  TypingIndicator.tsx
frontend/src/services/: api.ts
frontend/src/styles/: tokens.css
