[project]
name = "ai-travel-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-google-genai",
    "langgraph",
    "sentence-transformers",
    "pydantic>=2.0",
    "python-dotenv",
    "torch",
    "fastapi",
    "uvicorn[standard]",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "bcrypt",
    "PyJWT",
    "email-validator",
]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
